# Simple_DNS_Client

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO
src/: color.h  dns.c  dns.h  dns_parse.c  dns_parse.h  dns_table.c  error.c  error.h  main.c  udp.c  udp.h
